--- a/install/benrover_actuators/share/benrover_actuators/package.xml
+++ b/install/benrover_actuators/share/benrover_actuators/package.xml
@@ -1,27 +1,1 @@
-<package>
-  <name>benrover_actuators</name>
-  <version>0.0.0</version>
-  <description>Package ROS 2 pour les actionneurs du rover</description>
-  <maintainer email="ekfriedkinzoun@gmail.com">Elfried KINZOUN</maintainer>
-  <license>TODO: License declaration</license>
-
-  <buildtool_depend>ament_python</buildtool_depend>
-  <build_depend>rclpy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>action_msgs</build_depend>
-
-  <exec_depend>rclpy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>action_msgs</exec_depend>
-
-  <test_depend>ament_lint_common</test_depend>
-  <test_depend>ament_lint_auto</test_depend>
-
-  <export>
-    <build_type>ament_python</build_type>
-  </export>
-</package>
+/home/elfriedkinzoun/rosws/build/benrover_actuators/package.xml
